# snowvillage-go-st

./: .devcontainer.json  .env.example  .gitignore  CLAUDE.md  Docker起動手順.md  README.md  UI_Refactoring_Knowledge.md  db_cleanup.py  db_connection_test.py  docker-compose.dev.yml  docker-compose.yml  migrate_sqlite_to_postgres.py  production_setup_instructions.md  prompt.md  設計.md  開発者向け手順書.md
app/: Dockerfile  __init__.py  dashboard.py  database_manager.py  db_connection_test_prod.py  initialize_data.py  launch_screen.py  main.py  main_working.py  network_debug_test.py  pyproject.toml  requirements.txt  setup.py  slack_client.py  task_db.py  tasks.py  tasks.yml  test-app.py  test_prod_connection.sh  user.py
app/app_data/: snowvillage.db
app/application/services/: user_service.py
app/application/use_cases/: progress_use_case.py  task_progress_use_case.py
app/auth/: __init__.py  auth_manager.py  session_manager.py
app/data/: missions.yml  tasks.yml
app/database/: __init__.py  db_manager.py  models.py
app/domain/entities/: mission.py  progress.py  task.py  task_progress.py  user.py
app/domain/repositories/: mission_repository.py  progress_repository.py  user_repository.py
app/infrastructure/database/: connection.py
app/infrastructure/repositories/: mission_repository_impl.py  progress_repository_impl.py  task_progress_repository_impl.py  user_repository_impl.py
app/pages/: __init__.py  booth_visit.py  challenge_page.py  dashboard.py  learning_page.py  post.py  problem_list.py  quiz.py  ranking.py  tasks.py
app/tests/: __init__.py  performance_test.py
(+16 files in other folders)
